# programacion-sobre-redes

./: .gitignore  README.md
Joustus/: Joustus.md  pyproject.toml
Joustus/src/: classes.py  client.py  server.py
chat/: pyproject.toml
chat/chat/: Dockerfile  docker-compose.yml
chat/chat/src/: server.py  tui.py
chat/chat/src/orm/: main.py  models.py
chat/client/: requirements.txt
chat/client/src/: client.py  main.py
chat/server/: Dockerfile  docker-compose.yml  requirements.txt
chat/server/src/: server.py
chat/server/src/orm/: __init__.py  main.py  models.py
chat/src/: classes.py  client.py
chat/src/orm/: __init__.py
