[project]
name = "chat"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
requires-python = ">=3.14"
dependencies = [
    "bcrypt (>=5.0.0,<6.0.0)",
    "sqlalchemy (>=2.0.51,<3.0.0)",
    "pymysql (>=1.2.0,<2.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
